--- a/icinga2x/centos6/docker/Dockerfile
+++ b/icinga2x/centos6/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM centos
+FROM centos:centos6
 RUN yum -y install wget vim mailx
 # REPO EPEL
 RUN rpm --import https://fedoraproject.org/static/0608B895.txt
@@ -12,17 +12,12 @@ RUN yum makecache
 RUN yum -y install icinga2 icinga2-bin icinga2-common icinga2-doc icinga2-ido-mysql
 RUN yum -y install httpd
 RUN yum -y install python-whisper python-carbon graphite-web
-RUN yum -y install perl-CPAN perl-Parse-CPAN-Packages
-# INSTALL CPAN
-RUN perl -MCPAN -e 'install Monitoring::Generator::TestConfig'
-# CONFIGURE TESTS
-#RUN mkdir -p /etc/icinga2/testconf
-#RUN /usr/local/bin/create_monitoring_test_config.pl -l icinga /etc/icinga2/testconf/
-#RUN echo "Testplugins located in /etc/icinga2/testconf/plugins/"
-# RUN DAEMONS
-RUN /etc/init.d/icinga2 restart
-RUN /etc/init.d/httpd restart
-RUN /etc/init.d/carbon-cache restart
 WORKDIR /home/icinga
 USER icinga
 ENV HOME /home/icinga
+# FIX PERMISSIONS
+RUN chown -R icinga:icinga /etc/icinga2/conf.d
+# RUN DAEMONS
+RUN service icinga2 restart
+RUN service httpd restart
+RUN service carbon-cache restart
